--- a/Snake201711/Snake201711/MainWindow.xaml
+++ b/Snake201711/Snake201711/MainWindow.xaml
@@ -22,17 +22,23 @@
             <Label Grid.Row="0" Content="Pontszám" />
             <Label Grid.Row="1" Content="Megevett ételek"/>
             <Label Grid.Row="2" Content="Kígyó hossza"/>
-            <Label Grid.Row="3" Content="Játékidő"/>
-            <Button Grid.Row="4" Content="Start" 
+            <Label Grid.Row="3" x:Name="LabelPlayTime"/>
+            <Button Grid.Row="4" 
+                    x:Name="ButtonStart"
+                    Content="Start" 
                     Padding="10" 
                     Margin="10"
                     HorizontalAlignment="Left"
-                    VerticalAlignment="Bottom"/>
-            <Button Grid.Row="4" Content="Stop" 
+                    VerticalAlignment="Bottom" 
+                    Click="ButtonStart_Click" />
+            <Button Grid.Row="4" 
+                    x:Name="ButtonStop"
+                    Content="Stop" 
                     Padding="10" 
                     Margin="10"
                     HorizontalAlignment="Right"
-                    VerticalAlignment="Bottom"/>
+                    VerticalAlignment="Bottom" 
+                    Click="ButtonStop_Click"/>
         </Grid>
         <Grid Grid.Column="0" 
               Background="AliceBlue" 
