--- a/Snake201711/Snake201711/MainWindow.xaml
+++ b/Snake201711/Snake201711/MainWindow.xaml
@@ -19,9 +19,9 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition />
             </Grid.RowDefinitions>
-            <Label Grid.Row="0" Content="Pontszám" />
-            <Label Grid.Row="1" Content="Megevett ételek"/>
-            <Label Grid.Row="2" Content="Kígyó hossza"/>
+            <Label Grid.Row="0" x:Name="LabelPoints" />
+            <Label Grid.Row="1" x:Name="LabelEatenMealsCount"/>
+            <Label Grid.Row="2" x:Name="LabelSnakeLength"/>
             <Label Grid.Row="3" x:Name="LabelPlayTime"/>
             <Button Grid.Row="4" 
                     x:Name="ButtonStart"
