--- a/Snake201711/Snake201711/MainWindow.xaml
+++ b/Snake201711/Snake201711/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Snake201711"
         mc:Ignorable="d"
+        KeyDown="Window_KeyDown"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -31,6 +32,12 @@
                     HorizontalAlignment="Left"
                     VerticalAlignment="Bottom" 
                     Click="ButtonStart_Click" />
+
+            <Label Grid.Row="4"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Top"
+                   x:Name="LabelKeyDown" />
+
             <Button Grid.Row="4" 
                     x:Name="ButtonStop"
                     Content="Stop" 
