--- a/Snake201711/Snake201711/MainWindow.xaml
+++ b/Snake201711/Snake201711/MainWindow.xaml
@@ -48,7 +48,8 @@
                     VerticalAlignment="Bottom" 
                     Click="ButtonStop_Click"/>
         </Grid>
-        <Grid Grid.Column="0" 
+        <Grid x:Name="GridArena"
+              Grid.Column="0" 
               Background="AliceBlue" 
               Margin="10">
             <Grid.RowDefinitions>
