--- a/Snake201711/Snake201711/MainWindow.xaml
+++ b/Snake201711/Snake201711/MainWindow.xaml
@@ -7,12 +7,19 @@
         xmlns:fa="http://schemas.fontawesome.io/icons/"
         mc:Ignorable="d"
         KeyDown="Window_KeyDown"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="350" Width="850">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
+        <Canvas x:Name="CanvasArena"
+                Grid.Column="2" 
+                Background="AntiqueWhite" 
+                Margin="10"
+                HorizontalAlignment="Stretch" 
+                VerticalAlignment="Stretch" />
         <Grid Grid.Column="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
